--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
 
 script:
   # Basic role syntax check
+  - ansible-galaxy role install haghighi_ahmad.docker_ce
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
 
 notifications:
